--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,27 @@
 {
   "manifest_version": 3,
-  "name": "Transluzzern",
+  "name": "Translatuzz",
   "version": "1.0",
-  "description": "Transluzzes the wuzz",
-
-  "icons": {
-    "16": "",
-    "32": "",
-    "48": "",
-    "128": ""
+  "description": "Translate all words on a web page",
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
   },
   "content_scripts": [
     {
-      "js": ["scripts/content.js"],
-      "matches": [
-        "<all_urls>"
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
   ]
 }
