--- a/manifest.json
+++ b/manifest.json
@@ -8,20 +8,19 @@
     "scripting"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "scripts/background.js"
   },
   "action": {
-    "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+      "16": "images/sigmaknight16x16.jpg",
+      "48": "images/sigmaknight48x48.jpg",
+      "128": "images/sigmaknight128x128.jpg"
     }
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["scripts/content.js"]
     }
   ]
 }
