--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "scripting"
   ],
   "background": {
-    "service_worker": "scripts/background.js"
+    "service_worker": "./scripts/background.js"
   },
   "action": {
     "default_icon": {
@@ -20,7 +20,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/content.js"]
+      "js": ["./scripts/content.js"]
     }
   ]
 }
